--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -18,3 +18,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="HullsOfDeceptionGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="HullsOfDeceptionCharacter")
 
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Static
+
