--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -20,4 +20,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=Static
+CellSize=3.000000
 
