--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/HullOfDecp/Level/HullofDecption.HullofDecption
+GameDefaultMap=/Game/HullOfDecp/MainMenu/MainMenu.MainMenu
 EditorStartupMap=/Game/HullOfDecp/Level/HullofDecption.HullofDecption
-GlobalDefaultGameMode=/Game/HullsOfDecpGameMode.HullsOfDecpGameMode_C
+GlobalDefaultGameMode=/Game/HullOfDecp/HullsOfDecpGameMode.HullsOfDecpGameMode_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
